Контроль готовых блюд, формирование отчета по продуктам

--- a/templates/admin_menu.html
+++ b/templates/admin_menu.html
@@ -38,6 +38,7 @@
     <button onclick="document.location.href='/admin/requisitions'">Согласование заявок</button>
     <button onclick="document.location.href='/admin/user/add'">Добавить пользователя</button>
     <button onclick="document.location.href='/admin/users'">Смотреть список пользователей</button>
+    <button onclick="document.location.href='/admin/reports'">Формирование отчётов</button>
     <button onclick="document.location.href='/logout'">Выйти</button>
 
 </body>
