--- a/templates/reports.html
+++ b/templates/reports.html
@@ -14,6 +14,14 @@
                 <button onclick="window.open('/admin/report/products', '_blank')">
                     Скачать таблицу по продуктам
                 </button>
+
+                <button onclick="window.open('/admin/report/dishes', '_blank')">
+                    Скачать таблицу по блюдам
+                </button>
+
+                <button onclick="window.open('/admin/report/menus', '_blank')">
+                    Скачать таблицу по меню
+                </button>
             </div>
 
             <script>
