--- a/templates/layouts/management/products.html
+++ b/templates/layouts/management/products.html
@@ -7,6 +7,6 @@
 
 
 {% block sidebar_tabs %}
-    <li><a href="/manage/products">Список</a></li>
-    <li><a href="/manage/products/add">Добавить</a></li>
+    <li><a href="/cook/products">Список</a></li>
+    <li><a href="/cook/product/add">Добавить</a></li>
 {% endblock %}
