--- a/templates/includes/profile_popup.html
+++ b/templates/includes/profile_popup.html
@@ -1,17 +1,19 @@
 <div id="profile-popup">
     <ul id="profile-options">
-        <li>
-            <a href='/profile'>Профиль</a>
-        </li>
+        {% if current_user.is_authenticated %}
+            <li>
+                <a href='/profile'>Профиль</a>
+            </li>
 
-        {% if current_user.roles[0].name == 'user' %}
-        <li>
-            <a href='/reviews'>Отзывы</a>
-        </li>
+            {% if current_user.roles[0].name == 'user' %}
+            <li>
+                <a href='/reviews'>Отзывы</a>
+            </li>
+            {% endif %}
+
+            <li>
+                <a href='/logout'>Выйти</a>
+            </li>
         {% endif %}
-
-        <li>
-            <a href='/logout'>Выйти</a>
-        </li>
     </ul>
 </div>
