--- a/templates/layouts/management/menus.html
+++ b/templates/layouts/management/menus.html
@@ -7,6 +7,6 @@
 
 
 {% block sidebar_tabs %}
-    <li><a href="/manage/menus">Список</a></li>
-    <li><a href="/manage/menus/add">Добавить</a></li>
+    <li><a href="/cook/menus">Список</a></li>
+    <li><a href="/cook/menu/add">Добавить</a></li>
 {% endblock %}
