--- a/templates/statistics.html
+++ b/templates/statistics.html
@@ -11,7 +11,7 @@
     {% block content %}
 
         <button onclick="document.location.href='/admin/statistic/payments'">Просмотр статистики оплат</button>
-        <button onclick="document.location.href='/admin/statistic/attendance'">Просмотр статистики посещений</button>
+        <button onclick="document.location.href='/admin/statistic/attendance'">Просмотр статистики посещаемости</button>
         <button onclick="document.location.href='/admin/menu'">Назад</button>
 
     {% endblock %}
