Сделан шаблон получения меню

--- a/templates/layouts/base.html
+++ b/templates/layouts/base.html
@@ -19,7 +19,7 @@
     {% endblock %}
 </head>
 <body>
-    <div class="layout-wrapper">
+    <div class="base-layout-wrapper">
         {% include 'includes/header.html' %}
         {% block content %}
         
