--- a/static/styles/layouts/base.css
+++ b/static/styles/layouts/base.css
@@ -10,6 +10,7 @@
     --text: hsl(0, 0%, 18%);
     --text-muted: hsl(0, 0%, 40%);
     --text-light: hsl(0, 0%, 100%);
+    --shadow-big: 0px 6px 12px hsla(0, 0%, 0%, 0.2);
     --shadow: 0px 3px 6px hsla(0, 0%, 0%, 0.1);
     --shadow-small: 0px 2px 4px hsla(0, 0%, 0%, 0.1);
     --border-color: hsl(0, 0%, 80%);
@@ -33,7 +34,7 @@ body {
 }
 
 
-.layout-wrapper {
+.base-layout-wrapper {
     flex: 1 1;
     display: flex;
     flex-direction: column;
@@ -152,7 +153,7 @@ a {
 .title {
     margin: 0;
     text-align: center;
-    font-size: 2rem;
+    font-size: 1.8rem;
     font-weight: 700;
 
     &.left {
