--- a/static/styles/includes/profile_popup.css
+++ b/static/styles/includes/profile_popup.css
@@ -6,8 +6,9 @@
     right: 8px;
     z-index: 1000;
     background: var(--bg);
+    border: solid 2px var(--border-color);
     border-radius: var(--border-radius);
-    box-shadow: var(--shadow);
+    box-shadow: var(--shadow-big);
 }
 
 #profile-popup.active {
