Admins fix before merge

--- a/templates/includes/header.html
+++ b/templates/includes/header.html
@@ -24,7 +24,7 @@
                 </nav>
             {% else %}
                 <nav id="app-menu">
-                    <a href="/menu">Меню</a>
+                    <a href="/admin/menu">Меню</a>
                     <a href="/admin/products">Продукты</a>
                     <a href="/admin/dishes">Блюда</a>
                     <a href="/admin/users">Пользователи</a>
