--- a/templates/layouts/management/users.html
+++ b/templates/layouts/management/users.html
@@ -8,5 +8,5 @@
 
 {% block sidebar_tabs %}
     <li><a href="/admin/users">Список</a></li>
-    <li><a href="/manage/users/add">Добавить</a></li>
+    <li><a href="/admin/user/add">Добавить</a></li>
 {% endblock %}
