--- a/templates/users/edit.html
+++ b/templates/users/edit.html
@@ -89,7 +89,7 @@
             {% endif %}
 
             <div class="action-buttons">
-                <a href="/manage/users/{{ user.id }}">
+                <a href="/admin/users/{{ user.id }}">
                     <button type="button">Отмена</button>
                 </a>
                 <button type="submit" class="accent">Сохранить изменения</button>
