--- a/templates/menus/receiving.html
+++ b/templates/menus/receiving.html
@@ -40,7 +40,7 @@
                         {% endif %}
                     </h2>
 
-                    <div class="menu__rigth-container">
+                    <div class="menu__right-container">
                         <span class="menu__price">{{ history.cost }}₽</span>
 
                         {% if history.status %}
