--- a/static/styles/menus/receiving.css
+++ b/static/styles/menus/receiving.css
@@ -20,7 +20,7 @@
     align-items: center;
     justify-content: space-between;
     width: 100%;
-    height: 60px;
+    height: 54px;
     padding: 0 10px;
     background: var(--bg);
     border-radius: var(--border-radius);
@@ -33,14 +33,14 @@
     align-items: center;
     margin: 0;
     height: 100%;
-    font-size: 1.5rem;
+    font-size: 1.3rem;
 }
 
 
 .menu__text-separator {
-    height: 1.4rem;
+    height: 1.3rem;
     margin: 0 6px;
-    width: 3px;
+    width: 2px;
     border-radius: var(--border-radius);
     background: var(--text-muted);
 }
@@ -52,21 +52,21 @@
 
 
 .menu__receive-button {
-    font-size: 1.25rem;
+    font-size: 1.05rem;
 }
 
 
-.menu__rigth-container {
+.menu__right-container {
     display: flex;
     align-items: center;
     gap: 24px;
-    font-size: 1.6rem;
+    font-size: 1.3rem;
     font-weight: 600;
 }
 
 
 .menu__price {
-    font-size: 1.65rem;
+    font-size: 1.4rem;
 }
 
 
