--- a/templates/menus/adding.html
+++ b/templates/menus/adding.html
@@ -13,7 +13,7 @@
 
 {% block top_bar %}
     {{ super() }}
-    <button id="add-menu-btn" form="add-menu-form" class="add-btn accent">Добавить</button>
+    <button id="add-menu-btn" form="editMenuForm" class="add-btn accent">Добавить</button>
 {% endblock %}
 
 
