--- a/templates/products/list.html
+++ b/templates/products/list.html
@@ -5,7 +5,7 @@
 
 
 {% block head %}
-    <link rel="stylesheet" href="/static/styles/includes/header.css">
+    {{ super() }}
     <link rel="stylesheet" href="/static/styles/products/list.css">
 {% endblock %}
 
