--- a/templates/includes/header.html
+++ b/templates/includes/header.html
@@ -1,7 +1,7 @@
 <header>
     <div id="left-header">
         {% if current_user.is_authenticated %}
-            <button id="notifications-btn"><img alt="Уведомления"></button>
+            <button id="notifications-btn">Уведомления</button>
         {% endif %}
     </div>
 
