--- a/templates/users/user.html
+++ b/templates/users/user.html
@@ -71,7 +71,7 @@
             <button onclick="location.href='/admin/user/{{ user.id }}/edit'" class="accent">
                 Изменить
             </button>
-            <button onclick="if(confirm('Вы уверены, что хотите удалить пользователя?')) location.href='/admin/users/{{ user.id }}/del'" class="danger">
+            <button onclick="if(confirm('Вы уверены, что хотите удалить пользователя?')) location.href='/admin/user/{{ user.id }}/del'" class="danger">
                 Удалить
             </button>
         </div>
