заявки на закупки

--- a/templates/products/adding.html
+++ b/templates/products/adding.html
@@ -11,7 +11,7 @@
 
 {% block top_bar %}
     {{ super() }}
-    <button id="add-menu-btn" form="editProductForm" class="add-btn accent">Добавить</button>
+    <button id="add-product-btn" form="editProductForm" class="add-btn accent">Добавить</button>
 {% endblock %}
 
 {% block main %}
