--- a/templates/menus/list.html
+++ b/templates/menus/list.html
@@ -1,7 +1,7 @@
 {% extends 'layouts/management/menus.html' %}
 
 
-{% block title %}Админ: Список меню{% endblock %}
+{% block title %}Список меню{% endblock %}
 
 
 {% block head %}
