--- a/static/styles/requisitions/list.css
+++ b/static/styles/requisitions/list.css
@@ -34,3 +34,26 @@
 .requisition__composition li {
     color: var(--text-muted)
 }
+
+.requisition_admin-grid {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(220px, 1fr));
+    grid-auto-rows: 160px;
+    row-gap: 0.5rem;
+    column-gap: 0.5rem;
+    height: 100%;
+    width: 100%;
+    overflow-y: auto;
+    scroll-behavior: smooth;
+}
+
+.requisition_admin {
+    box-sizing: border-box;
+    background: var(--bg);
+    border: solid 2px transparent;
+    border-radius: var(--border-radius);
+    box-shadow: var(--shadow);
+    overflow: hidden;
+    transition: border 0.1s ease-in-out;
+
+}
