--- a/templates/requisition/admin.html
+++ b/templates/requisition/admin.html
@@ -1,11 +1,28 @@
-{% extends 'layouts/management/base.html' %}
+{% extends 'layouts/sidebar_w_header.html' %}
+
+{% from 'macros/sidebar.html' import sidebar %}
+
+{% block title %}Админ: Закупки{% endblock %}
 
 
 {% block head %}
     {{ super() }}
     <link rel="stylesheet" href="/static/styles/requisitions/list.css">
+    <link rel="stylesheet" href="/static/styles/macros/sidebar.css">
 {% endblock %}
 
+{% block sidebar %}
+    {% call sidebar(header='Возможности') %}
+    <ul class="days-list">
+        <li class="day">
+            <span class="day__link">Одобрить</span>
+        </li>
+        <li class="day">
+            <span class="day__link">Отклонить</span>
+        </li>
+    </ul>
+    {% endcall %}
+{% endblock %}
 
 {% block top_bar %}
     <div class="top-bar__left">
