--- a/templates/users/edit.html
+++ b/templates/users/edit.html
@@ -2,6 +2,14 @@
 
 {% block title %}Редактировать пользователя {{ user.surname }} {{ user.name[0] }}. {{ user.patronymic[0] }}.{% endblock %}
 
+{% block top_bar %}
+{{ super() }}
+<div>
+    <button onclick="location.href='/admin/users/{{ user.id }}'" type="button">Отмена</button>
+    <button type="submit" form="edit-user-form" class="accent">Сохранить</button>
+</div>
+{% endblock %}
+
 {% block main %}
     <div class="user-profile edit-form">
         <div class="profile-header">
@@ -86,13 +94,6 @@
                 </div>
             </div>
             {% endif %}
-
-            <div class="action-buttons">
-                <a href="/admin/users/{{ user.id }}">
-                    <button type="button">Отмена</button>
-                </a>
-                <button type="submit" class="accent">Сохранить изменения</button>
-            </div>
         </form>
     </div>
 {% endblock %}
